ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: weatherapp-ui

spec:
  replicas: 2 
  selector:
    matchLabels:
      api.kubernetes.io/name: weatherapp-ui 

  template:
    metadata:
      labels:
        api.kubernetes.io/name: weatherapp-ui

    spec:
      containers:
        - name: weatherapp-ui 
          image: afakharany/weatherapp-ui:lab
          imagePullPolicy: IfNotPresent
          ports:
            - name: http 
              containerPort: 3000
              protocol: TCP 

          livenessProbe:
            httpGet:
              path: /health 
              port: http

          readinessProbe:
            httpGet:
                path: /health 
                port: http
