ui/service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: weatherapp-ui 

spec:
  type: ClusterIP
  selector:
    api.kubernetes.io/name: weatherapp-ui
  ports:
    - port: 3000
      targetPort: http 
      protocol: TCP 
      name: http
