ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: weatherapp-ingress 

spec:
  ingressClassName: nginx 
  tls:
  - hosts:
     - weatherapp.local 
    secretName: weatherapp-ui-tls
  rules:
    - host: weatherapp.local 
      http: 
        paths:
        - path: / 
          pathType: Prefix 
          backend: 
            service: 
              name: weatherapp-ui 
              port:
                number: 3000
